--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,9 @@
 {
+    "autoload": {
+        "psr-4": {
+            "JLG\\BrokenLinks\\": "liens-morts-detector-jlg/includes/"
+        }
+    },
     "require-dev": {
         "phpunit/phpunit": "^9",
         "brain/monkey": "^2.6"
