--- a/.github/workflows/frontend-tests.yml
+++ b/.github/workflows/frontend-tests.yml
@@ -10,6 +10,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.1'
+          coverage: none
+      - name: Install Composer dependencies
+        run: composer install --no-ansi --no-interaction --no-progress
+      - name: Run PHP unit tests
+        run: composer test:php
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
